finish graph filters

--- a/milestone4/4_graph_signal_processing.ipynb
+++ b/milestone4/4_graph_signal_processing.ipynb
@@ -361,11 +361,9 @@
    "source": [
     "#not what should be done here! CF beginning of milestone to draw the signal on the graph. I think colors are the best option for us\n",
     "#save the graph plot outside !\n",
-    "def plot_fourier(eigenvector, title ):\n",
-    "    fig = plt.figure()\n",
-    "    ax = plt.gca()\n",
+    "def plot_fourier(eigenvector, title):\n",
     "    n_eigenvector = eigenvector.shape[0]\n",
-    "    ax.plot(range(n_eigenvector),eigenvector, 'o', c='blue', markeredgecolor='none', markersize= 1)\n",
+    "    plt.plot(range(n_eigenvector),eigenvector, 'o', c='blue', markeredgecolor='none', markersize= 1)\n",
     "    plt.xlabel('The n-th node')\n",
     "    plt.ylabel('Signal value')\n",
     "    plt.title(title)"
@@ -379,9 +377,9 @@
    "source": [
     "def plot_graph_adj(adjacency, eigenvectors):\n",
     "    graph = nx.from_scipy_sparse_matrix(adjacency)\n",
-    "    coords = nx.spring_layout(graph)  # Force-directed layout.\n",
+    "    coords_spring = nx.spring_layout(graph)  # Force-directed layout.\n",
     "    coords = eigenvectors[:, 1:3]  # Laplacian eigenmaps.\n",
-    "    return graph, coords"
+    "    return graph, coords, coords_spring"
    ]
   },
   {
@@ -391,9 +389,21 @@
    "outputs": [],
    "source": [
     "def plot_graph(graph, coords, signal):\n",
-    "    nc = nx.draw_networkx_nodes(graph, coords, node_size=1, node_color=[signal[n] for n in range(graph.number_of_nodes() )]) \n",
+    "#    node_color = [signal[n] for n in range(graph.number_of_nodes())]\n",
+    "    node_color = signal\n",
+    "    nc = nx.draw_networkx_nodes(graph, coords, node_size=1, node_color=node_color) \n",
     "    #nx.draw_networkx_edges(graph, coords, alpha=0.1)\n",
     "    plt.colorbar(nc)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if 'graph' not in globals():\n",
+    "    graph, coords, coords_spring = plot_graph_adj(adjacency, eigenvectors_norm)"
    ]
   },
   {
@@ -410,7 +420,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_fourier(U[:,0], 'First Fourier Basis Vector ')"
+    "plt.figure(figsize=(12,8))\n",
+    "plt.subplot(2,2,1)\n",
+    "plot_fourier(U[:,0], 'First Fourier Basis Vector ')\n",
+    "plt.subplot(2,2,2)\n",
+    "plot_fourier(U[:,1], 'Second Fourier Basis Vector ')\n",
+    "plt.subplot(2,2,3)\n",
+    "plot_fourier(U[:,2], 'Third Fourier Basis Vector ')\n",
+    "plt.subplot(2,2,4)\n",
+    "plot_fourier(U[:,n_nodes-1], 'Last Fourier Basis Vector ')\n"
    ]
   },
   {
@@ -419,71 +437,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_fourier(U[:,1], 'Second Fourier Basis Vector ')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_fourier(U[:,2], 'Third Fourier Basis Vector ')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_fourier(U[:,n_nodes-1], 'Last Fourier Basis Vector ')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if 'graph' not in globals():\n",
-    "    graph, coords = plot_graph_adj(adjacency, eigenvectors_norm)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_graph(graph, coords,eigenvectors_norm[:,0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_graph(graph, coords,eigenvectors_norm[:,1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_graph(graph, coords, eigenvectors_norm[:,2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_graph(graph, coords, eigenvectors_norm[:,-1])"
+    "c = coords\n",
+    "# c = coords_spring\n",
+    "plt.figure(figsize=(12,8))\n",
+    "plt.subplot(2,2,1)\n",
+    "plot_graph(graph, c, eigenvectors_norm[:,0]); plt.title('First Fourier Basis Vector')\n",
+    "plt.subplot(2,2,2)\n",
+    "plot_graph(graph, c, eigenvectors_norm[:,1]); plt.title('Second Fourier Basis Vector')\n",
+    "plt.subplot(2,2,3)\n",
+    "plot_graph(graph, c, eigenvectors_norm[:,2]); plt.title('Third Fourier Basis Vector')\n",
+    "plt.subplot(2,2,4)\n",
+    "plot_graph(graph, c, eigenvectors_norm[:,-1]); plt.title('Last Fourier Basis Vector');\n"
    ]
   },
   {
@@ -555,7 +519,7 @@
     "\n",
     "# create label vector\n",
     "label = np.where(labels_all == most_common_label, np.ones(n_nodes, int), np.zeros(n_nodes, int))\n",
-    "plot_graph(graph, coords, label)"
+    "plot_graph(graph, coords, label);"
    ]
   },
   {
@@ -575,7 +539,7 @@
    "outputs": [],
    "source": [
     "# XXX TODO: what should we plot here??? \n",
-    "plt.plot(GFT(label))"
+    "plt.plot(GFT(label));"
    ]
   },
   {
@@ -641,8 +605,24 @@
     "    return np.exp(-t*e)\n",
     "\n",
     "def inverse_kernel(e, t):\n",
-    "    I=np.eye(len(e))\n",
-    "    return np.linalg.inv(I+t*laplacian_combinatorial).dot(e)\n",
+    "    '''\n",
+    "    (I + t*L)^-1 = U @ diag(g) @ U.T\n",
+    "    g = diag(U.T @ (I + t*L)^-1 @ U)\n",
+    "\n",
+    "    dumb solution:\n",
+    "    g = np.diag(U.T @ np.linalg.inv(I + t*L) @ U)\n",
+    "\n",
+    "    simplification using: U^-1 = U.T and L = U @ diag(e) @ U.T\n",
+    "    (U.T @ (I + t*L)^-1 @ U)^-1 = U^-1 @ (I + t*L) @ U.T^-1\n",
+    "    ... = U.T @ (I + t*L) @ U\n",
+    "    ... = U.T @ U + U.T @ t*L @ U\n",
+    "    ... = I + t * U.T @ L @ U\n",
+    "    ... = I + t * diag(e)\n",
+    "    diag(g) = (I + t*diag(e))^-1\n",
+    "    g = 1/(1 + t*e)\n",
+    "    '''\n",
+    "    g = 1/(1 + t*e)\n",
+    "    return g\n",
     "\n",
     "def rectangle_kernel(e, l_min, l_max):\n",
     "    cond = np.logical_and(e >= l_min, e <= l_max)\n",
@@ -650,16 +630,8 @@
     "\n",
     "def graph_filter(x, kernel, **kwargs):\n",
     "    e = eigenvalues_comb\n",
-    "    return iGFT(kernel(e, **kwargs)*GFT(x))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "graph_filter(label, heat_kernel, tau=1.0)"
+    "    g = kernel(e, **kwargs)\n",
+    "    return iGFT(np.matmul(np.diag(g),GFT(x)))"
    ]
   },
   {
@@ -674,13 +646,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "inputHidden": false,
-    "outputHidden": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here."
+    "plt.plot(heat_kernel(e, 0.1), label='heat kernel')\n",
+    "plt.plot(inverse_kernel(e, 0.1), label='inverse kernel')\n",
+    "plt.plot(rectangle_kernel(e, 5, 10), label='rectangle kernel')\n",
+    "plt.ylabel('amplitude')\n",
+    "plt.xlabel('eigenvalue_number')\n",
+    "plt.title('Spectral domain filters')\n",
+    "plt.legend();"
    ]
   },
   {
@@ -701,7 +676,58 @@
    },
    "outputs": [],
    "source": [
-    "# Your code here."
+    "dirac = np.zeros(n_nodes)\n",
+    "dirac[np.random.choice(n_nodes, size=2, replace=False)] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "inputHidden": false,
+    "outputHidden": false
+   },
+   "outputs": [],
+   "source": [
+    "heat_filtered = graph_filter(dirac, heat_kernel, t=1)\n",
+    "inverse_filtered = graph_filter(dirac, inverse_kernel, t=1)\n",
+    "rectangle_filtered = graph_filter(dirac, rectangle_kernel, l_min=5, l_max=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "inputHidden": false,
+    "outputHidden": false
+   },
+   "outputs": [],
+   "source": [
+    "c = coords\n",
+    "plt.figure(figsize=(15,3))\n",
+    "plt.subplot(1,3,1)\n",
+    "plot_graph(graph, c, heat_filtered); plt.title('heat kernel')\n",
+    "plt.subplot(1,3,2)\n",
+    "plot_graph(graph, c, inverse_filtered); plt.title('inverse kernel')\n",
+    "plt.subplot(1,3,3)\n",
+    "plot_graph(graph, c, rectangle_filtered); plt.title('rectangle kernel');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12,7))\n",
+    "plt.subplot(2,2,1)\n",
+    "plt.plot(dirac); plt.title('dirac signal')\n",
+    "plt.subplot(2,2,2)\n",
+    "plt.plot(heat_filtered); plt.title('heat kernel')\n",
+    "plt.subplot(2,2,3)\n",
+    "plt.plot(inverse_filtered); plt.title('inverse kernel')\n",
+    "plt.subplot(2,2,4)\n",
+    "plt.plot(rectangle_filtered); plt.title('rectangle kernel');"
    ]
   },
   {
