--- a/Project/Graph_creation_example.ipynb
+++ b/Project/Graph_creation_example.ipynb
@@ -8527,7 +8527,7 @@
    "outputs": [],
    "source": [
     "# save the graph (take around half h to make)\n",
-    "nx.write_gpickle(G, \"graph.gpickle\")"
+    "# nx.write_gpickle(G, \"graph.gpickle\")"
    ]
   },
   {
